# Temoji

./: .gitignore  README.md  index.html  package.json
src/: emoji.ts  main.tsx  settings.ts  shortcut.ts  store.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: App.tsx  EmojiGroup.tsx  GroupBar.tsx  SearchBar.tsx
src/components/EmojiGroup/: EmojiGroup.css  EmojiGroup.tsx
src/components/EmojiGroup/EmojiTonePickerModal/: EmojiTonePickerModal.css  EmojiTonePickerModal.tsx
src/components/GroupBar/: GroupBar.css  GroupBar.tsx
src/components/SearchBar/: SearchBar.css  SearchBar.tsx
src/components/Settings/SettingsOption/: SettingsOption.tsx
src/components/Settings/Shortcut/: Shortcut.css  Shortcut.tsx
src/components/Settings/Theme/: Theme.tsx
src/components/TopBar/: TopBar.css  TopBar.tsx
src/slices/: chosenGroupSlice.ts  emojiPreferencesSlice.ts  searchInputSlice.ts  userSettingsSlice.ts
src/state/: reducer.tsx
src/styles/: EmojiGroup.css  GroupBar.css  SearchBar.css
src/windows/App/: App.css  App.tsx
src/windows/Settings/: Settings.css  Settings.tsx
